index page design

--- a/web/templates/404.html
+++ b/web/templates/404.html
@@ -9,6 +9,6 @@
       <div class="err">4</div>
       <i class="far fa-question-circle fa-spin"></i>
       <div class="err2">4</div>
-      <div class="msg">Может быть, эта страница переехала? Была удалена? Скрывается в карантине? Или вообще никогда не существовала? <p>Давайте перейдем <a href="/">на главную</a> и попробуем оттуда.</p></div>
+      <div class="msg">Может быть, эта страница переехала? Была удалена? Скрывается в карантине? Или вообще никогда не существовала? <p>Давайте перейдем <a href="/protected/">на главную</a> и попробуем оттуда.</p></div>
     </div>
   </body>
