--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,4 +1,81 @@
 {{template "header.html" .}}
 <div class="work-group">
+    <div class="description">
+        <h2>Добро пожаловать на сайт!</h2>
+    </div>
+    <div class="grid">
+        <a href="/protected/recognition">
+        <div class="square">
+            <div class="square-img">
+                <img class="svg-icon" src="/web/static/img/index/audio-to-text.svg" alt="Image 1">
+            </div>
+            <div class="square-text">
+                <h2>Расшифровка</h2>
+                <p>Наш сайт предлагает вам возможность легко и быстро расшифровать любое аудио/видео</p>
+            </div>
+        </div>
+        </a>
+
+        <a href="/protected/image">
+        <div class="square">
+            <div class="square-img">
+                <img class="svg-icon" src="/web/static/img/index/ai-image.svg" alt="Image 1">
+            </div>
+            <div class="square-text">
+                <h2>Генерация изображения</h2>
+                <p>Наш сайт предлагает вам возможность легко и быстро сгенерировать изображение</p>
+            </div>
+        </div>
+        </a>
+
+        <a href="/protected/imgprocess">
+        <div class="square">
+            <div class="square-img">
+                <img class="svg-icon" src="/web/static/img/index/image-transform.svg" alt="Image 1">
+            </div>
+            <div class="square-text">
+                <h2>Обработка изображения</h2>
+                <p>Наш сайт предлагает вам возможность легко и быстро обработать любое изображение</p>
+            </div>
+        </div>
+        </a>
+
+        <a href="/protected/text">
+        <div class="square">
+            <div class="square-img">
+                <img class="svg-icon" src="/web/static/img/index/rewrite-text.svg" alt="Image 1">
+            </div>
+            <div class="square-text">
+                <h2>Обработка текста</h2>
+                <p>Наш сайт предлагает вам возможность легко и быстро обработать любой текст</p>
+            </div>
+        </div>
+        </a>
+
+        <a href="/protected/news">
+        <div class="square">
+            <div class="square-img">
+                <img class="svg-icon" src="/web/static/img/index/actual-news.svg" alt="Image 1">
+            </div>
+            <div class="square-text">
+                <h2>Актуальные новости</h2>
+                <p>Наш сайт предлагает вам возможность легко и быстро обработать любой текст</p>
+            </div>
+        </div>
+        </a>
+
+        <a href="/protected/media">
+        <div class="square">
+            <div class="square-img">
+                <img class="svg-icon" src="/web/static/img/index/news-from-media.svg" alt="Image 1">
+            </div>
+            <div class="square-text">
+                <h2>Новости СМИ</h2>
+                <p>Наш сайт предлагает вам возможность легко и быстро обработать любой текст</p>
+            </div>
+        </div>
+        </a>
+
+    </div>
 </div>
 {{template "footer.html" .}}
