--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    box-sizing: border-box;
     justify-content: space-between;
 }
 .description {
