--- a/web/styles/results/progress-operation-style.css
+++ b/web/styles/results/progress-operation-style.css
@@ -35,6 +35,7 @@
         background: transparent;
         background-color: transparent;
         animation: rotate 10s linear infinite;
+        fill: white;
     }
 
     .repeat-url{
