--- a/web/templates/image-upscale-page.html
+++ b/web/templates/image-upscale-page.html
@@ -1,13 +1,13 @@
 {{template "header.html" .}}
 <div class="work-group">
-    <div class="input-group">
+    <div class="input-group clr">
         <input type="file" class="input-field" name="filePath" id="fileInput" accept=".jpeg, .jpg, .png">
     </div>
     <div class=control-group>
         <button class="button" id="upscaleButton">Увеличить</button>
         <button class="button" id="removeBgButton">Удалить фон</button>
     </div>
-    <div class="output-group">
+    <div class="output-group clr">
         <img id="image" src="/web/static/img/templates/3-2.png">
         <a id="downloadLink" href="/web/static/img/templates/3-2.png" download="image.png">Скачать изображение</a>
     </div>
