--- a/web/styles/admin-user.css
+++ b/web/styles/admin-user.css
@@ -31,7 +31,7 @@
 }
 
 .operations .list .elements .element{
-    max-height: 60px;
+    max-height: 100px;
     margin-bottom: 3px;
     box-sizing: border-box;
     display: flex;
@@ -73,11 +73,20 @@
     width: 50%;
 }
 
-.data a{
+.elements a{
     color: black;
+}
+
+.elements a:hover{
+    text-decoration: none;
+}
+
+.element:hover{
+    background-color: #880b0b;
+    color: white;
 }
 
 .data p{
     text-align: left;
-    text-wrap: break-word;
+    text-wrap: pretty;
 }
