--- a/web/styles/feed-style.css
+++ b/web/styles/feed-style.css
@@ -14,7 +14,6 @@
     height: auto;
     padding: 10px 10px 5px 10px;
     box-sizing:border-box;
-    background-color: rgba(245, 245, 245, 0.396);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column; /* Устанавливаем вертикальное направление */
@@ -40,10 +39,6 @@
     text-transform: uppercase;
   }
 
-  .news-element .title a, .news-element .title a:hover{
-    color: rgb(39, 39, 39);
-  }
-
   .news-element .description{
     margin-top: 8px;  /* Установите нужное значение */
     margin-bottom: 0px; /* Установите нужное значение */
@@ -64,5 +59,10 @@
   }
 
   .news-element .info .date{
-    color: rgb(130, 130, 130);
+    color: rgb(75, 75, 75);
+  }
+
+  .news-element:hover{
+    background: rgb(191, 45, 45);
+    color: white;
   }
