--- a/web/templates/feed.html
+++ b/web/templates/feed.html
@@ -1,8 +1,9 @@
 {{template "header.html" .}}
 <div class="work-group">
 {{range .news}}
-<div class="news-element">
-    <h3 class="title"><a href="{{.URL}}" target="_blank">{{.Title}}</a></h3>
+<a href="{{.URL}}" target="_blank">
+<div class="news-element clr">
+    <h3 class="title">{{.Title}}</h3>
     <hr>
     <p class="description">{{.Description}}</p>
     <div class="info">
@@ -10,6 +11,7 @@
         <p class="date">{{.Date}}</p>
     </div>
 </div>
+</a>
 {{end}}
 </div>
 {{template "footer.html" .}}
