--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -6,10 +6,10 @@
   <meta http-equiv="content-type" content="text/html; charset=utf8" />
   <title>Реальное время / {{.title}}</title>
   <link rel="icon" href="/web/static/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/web/styles/basic/basic.css">
-  <link rel="stylesheet" href= "{{.style}}">
-  <link rel="stylesheet" href="/web/styles/basic/style.css">
+  <link rel="stylesheet" href="/web/styles/basic/new-basic.css">
+  <link rel="stylesheet" href="/web/styles/basic/new-style.css">
   <link rel="stylesheet" href="/web/styles/basic/animation.css">
+  <link rel="stylesheet" href= "{{.style}}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -32,6 +32,6 @@
     <div class="header-group">
       <img src="/web/static/img/logo.png" class="logo-image"/>
       <h1>Реальное время / {{.title}} </h1>
-      <p class="version-label" style="margin-left: 10px; color: rgb(62, 62, 62);">(v 5.0.0)</p>
+      <p class="version-label" style="margin-left: 10px; color: rgb(96, 96, 96);">(v 5.1.0)</p>
     </div>
 {{end}}
