--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,11 +1,11 @@
 {{template "header.html" .}}
 <div class="work-group">
-    <div class="description">
+    <div class="description clr">
         <h2>Добро пожаловать на сайт!</h2>
     </div>
     <div class="grid">
         <a href="/protected/recognition">
-        <div class="square">
+        <div class="square clr">
             <div class="square-img">
                 <img class="svg-icon" src="/web/static/img/index/audio-to-text.svg" alt="Image 1">
             </div>
@@ -17,7 +17,7 @@
         </a>
 
         <a href="/protected/image">
-        <div class="square">
+        <div class="square clr">
             <div class="square-img">
                 <img class="svg-icon" src="/web/static/img/index/ai-image.svg" alt="Image 1">
             </div>
@@ -29,7 +29,7 @@
         </a>
 
         <a href="/protected/imgprocess">
-        <div class="square">
+        <div class="square clr">
             <div class="square-img">
                 <img class="svg-icon" src="/web/static/img/index/image-transform.svg" alt="Image 1">
             </div>
@@ -41,7 +41,7 @@
         </a>
 
         <a href="/protected/text">
-        <div class="square">
+        <div class="square clr">
             <div class="square-img">
                 <img class="svg-icon" src="/web/static/img/index/rewrite-text.svg" alt="Image 1">
             </div>
@@ -53,25 +53,25 @@
         </a>
 
         <a href="/protected/news">
-        <div class="square">
+        <div class="square clr">
             <div class="square-img">
                 <img class="svg-icon" src="/web/static/img/index/actual-news.svg" alt="Image 1">
             </div>
             <div class="square-text">
                 <h2>Актуальные новости</h2>
-                <p>Наш сайт предлагает вам возможность легко и быстро обработать любой текст</p>
+                <p>Наш сайт предлагает вам возможность следить за новостями различных ведомств</p>
             </div>
         </div>
         </a>
 
         <a href="/protected/media">
-        <div class="square">
+        <div class="square clr">
             <div class="square-img">
                 <img class="svg-icon" src="/web/static/img/index/news-from-media.svg" alt="Image 1">
             </div>
             <div class="square-text">
                 <h2>Новости СМИ</h2>
-                <p>Наш сайт предлагает вам возможность легко и быстро обработать любой текст</p>
+                <p>Наш сайт предлагает вам возможность следить за новостями федеральных СМИ</p>
             </div>
         </div>
         </a>
