--- a/web/templates/text-processing-page.html
+++ b/web/templates/text-processing-page.html
@@ -1,13 +1,13 @@
 {{template "header.html" .}}
 <div class="work-group">
     <div class="popup-container" id="popupContainer"></div>
-    <div class="input-text-group">
+    <div class="input-text-group clr">
         <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
         <div class="input-text-area">
-            <div class="area">
+            <div class="area clr">
             <textarea class="output-area" id="promtArea" placeholder="Введите сюда задачу для нейросети: ЧТО НУЖНО СДЕЛАТЬ С ЭТИМ ТЕКСТОМ"></textarea>
             </div>
-            <div class="template">
+            <div class="template clr">
             <p class = "templateP">Выбрать готовый шаблон:</p>
             <select id="promtSelect">
                 {{range .templates}}
@@ -23,13 +23,13 @@
             <form action="https://yandex.cloud/ru/docs/foundation-models/prompts/yandexgpt/" target="_blank"><button class="help-button">?</button></form>
         </div>
     </div>
-    <div class="output-text-group">
+    <div class="output-text-group clr">
         <textarea class="output-area" id="outputArea" readonly placeholder="Здесь появится обработанный текст"></textarea>
     </div>
 </div>
 <div class="bottom-group">
-    <button class="button b1" id="saveFile" disabled>Сохранить</button>
-    <button class="button b2" id="copyText" disabled>Скопировать</button>
-    <button class="button b3" id="resetButton" disabled>Восстановить</button>
+    <button class="button" id="saveFile" disabled>Сохранить</button>
+    <button class="button-copy" id="copyText" disabled>Скопировать</button>
+    <button class="button" id="resetButton" disabled>Восстановить</button>
 </div>
 {{template "footer.html" .}}
