--- a/web/styles/admin-user.css
+++ b/web/styles/admin-user.css
@@ -27,11 +27,11 @@
     overflow-y: auto;
     overflow-x: hidden;;
     display: list-item;
-    max-height: 62vh;
+    height: 62vh;
 }
 
 .operations .list .elements .element{
-    max-height: 100px;
+    max-height: 200px;
     margin-bottom: 3px;
     box-sizing: border-box;
     display: flex;
@@ -82,11 +82,11 @@
 }
 
 .element:hover{
-    background-color: #880b0b;
+    background: rgb(191, 45, 45);
     color: white;
 }
 
 .data p{
     text-align: left;
-    text-wrap: pretty;
+    font-weight: bold;
 }
