--- a/web/styles/user-style.css
+++ b/web/styles/user-style.css
@@ -43,8 +43,7 @@
 }
 
 .element:hover{
-    color: white;
-    background: rgb(191, 45, 45);
+    background: #e3e5e8;
 }
 
 .user-info{
@@ -69,6 +68,7 @@
     margin-right: 5px;
     margin-bottom: 5px;
     margin-top: 5px;
+    
 }
 
 .logoutForm{
@@ -80,11 +80,10 @@
     box-sizing: border-box;
 }
 
-.logoutForm .logoutBtn{
+.logoutBtn{
     width: 200px;
     height: 30px;
     border: none;
-    color: white;
 }
 
 
