--- a/web/templates/admin-images.html
+++ b/web/templates/admin-images.html
@@ -7,7 +7,7 @@
     </div>
     <div class="el-desc">
         <a href="{{.URI}}" target="_blank" class="description"><p>{{.Prompt}}</p></a>
-        <p class="date"><a href="/admin/user/{{.USER_ID}}" target="_blank">{{.Name}} {{.LastName}}</a> — {{.Date}}</p>
+        <p class="date"><a href="/admin/users/{{.USER_ID}}" target="_blank">{{.Name}} {{.LastName}}</a> — {{.Date}}</p>
     </div>
 </div>
 {{end}}
