--- a/web/templates/recognition-page.html
+++ b/web/templates/recognition-page.html
@@ -36,7 +36,7 @@
     </div>
     <div class="bottom-group">
       <button class="button" id="saveFile" disabled>Сохранить</button>
-      <button class="button-copy" id="copyText" disabled>Скопировать</button>
+      <button class="button" id="copyText" disabled>Скопировать</button>
       <button class="button" id="resetButton" disabled>Восстановить</button>
     </div>
 {{template "footer.html" .}}
