--- a/web/templates/recognition-result.html
+++ b/web/templates/recognition-result.html
@@ -22,6 +22,6 @@
     </div>
 </div>
 <div class="button-save">
-    <button class="save-button" id="saveButton">Сохранить</button>
+    <button class="button" id="saveButton">Сохранить</button>
 </div>
 {{template "footer.html" .}}
