--- a/web/templates/user.html
+++ b/web/templates/user.html
@@ -29,7 +29,7 @@
        </div>
 
        <div class="list">
-        <h3 class="header clr">Обработка текста</h3>
+        <h3 class="list-header clr">Обработка текста</h3>
         <div class="elements">
            {{range .Texts}}
            <a href="/protected/operation/{{.ID}}" target="_blank">
