--- a/web/styles/admin-images-style.css
+++ b/web/styles/admin-images-style.css
@@ -14,7 +14,7 @@
     max-height: 200px;
     padding: 10px 10px 5px 10px;
     box-sizing:border-box;
-    background-color: rgba(245, 245, 245, 0.396);
+    background-color: #fff;
     display: flex;
     flex-direction: row;
     gap: 30px;
