--- a/web/styles/basic/404.css
+++ b/web/styles/basic/404.css
@@ -1,52 +1,35 @@
 
 body {
-    background: linear-gradient(170deg, rgba(49, 57, 73, 0.8) 20%, rgba(49, 57, 73, 0.5) 20%, rgba(49, 57, 73, 0.5) 35%, rgba(41, 48, 61, 0.6) 35%, rgba(41, 48, 61, 0.8) 45%, rgba(31, 36, 46, 0.5) 45%, rgba(31, 36, 46, 0.8) 75%, rgba(49, 57, 73, 0.5) 75%), linear-gradient(45deg, rgba(20, 24, 31, 0.8) 0%, rgba(41, 48, 61, 0.8) 50%, rgba(82, 95, 122, 0.8) 50%, rgba(133, 146, 173, 0.8) 100%) #313949;
-  }
+    background: #edeef0
+}
   
   .mainbox {
-    background-color: #00000059;
+    background-color: #373737;
     border-radius: 15px;
     margin: auto;
     height: 600px;
     width: 600px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
   }
   
     .err {
       color: #ffffff;
-      font-family: 'Nunito Sans', sans-serif;
-      font-size: 11rem;
-      position:absolute;
-      left: 20%;
-      top: 8%;
-    }
-  
-  .far {
-    position: absolute;
-    font-size: 8.5rem;
-    left: 42%;
-    top: 15%;
-    color: #ffffff;
-  }
-  
-   .err2 {
-      color: #ffffff;
-      font-family: 'Nunito Sans', sans-serif;
-      font-size: 11rem;
-      position:absolute;
-      left: 68%;
-      top: 8%;
+      font-family: 'PT Sans';
+      font-size: 200px;
+      margin-bottom: 10px;
+      margin-top: 10px;
     }
   
   .msg {
+    margin-top: 0;
     color: #ffffff;
-      text-align: center;
-      font-family: 'Nunito Sans', sans-serif;
-      font-size: 1.6rem;
-      position:absolute;
-      left: 16%;
-      top: 45%;
-      width: 75%;
+    text-align: center;
+    font-family: 'PT Sans';
+    font-size: 30px;
+    width: 90%;
     }
   
   a {
