--- a/web/styles/feed-style.css
+++ b/web/styles/feed-style.css
@@ -1,12 +1,9 @@
 .work-group{
     display: flex;
     flex-direction: column;
-    gap: 0.5%;
-    /*grid-template-columns: repeat(1, 1fr);*/
+    gap: 1.5%;
     overflow-y: auto;
     overflow-x: hidden;
-    padding: 5px;
-    box-sizing:border-box;
   }
   
   .work-group .news-element{
@@ -14,7 +11,6 @@
     height: auto;
     padding: 10px 10px 5px 10px;
     box-sizing:border-box;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column; /* Устанавливаем вертикальное направление */
     justify-content: space-between; /* Распределяем пространство между элементами */
@@ -63,6 +59,6 @@
   }
 
   .news-element:hover{
-    background: rgb(191, 45, 45);
+    background: #e3e5e8;
     color: white;
   }
