--- a/web/styles/results/no-operation-style.css
+++ b/web/styles/results/no-operation-style.css
@@ -1,55 +1,37 @@
-  .mainbox {
-    border-radius: 100px;
-    margin: auto;
-    height: 700px;
-    width: 700px;
-    position: relative;
-    background: transparent;
+.mainbox {
+  background-color: #373737;
+  border-radius: 15px;
+  margin: auto;
+  height: 600px;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center
+}
+
+  .err {
+    color: #ffffff;
+    font-family: 'PT Sans';
+    font-size: 200px;
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
 
-    .err {
-      font-size: 11.5rem;
-      position:absolute;
-      left: 20%;
-      top: 8%;
-      right: 52%;
-      font-weight: 700;
-      background-color: transparent;
-    }
-  
-  .far {
-    position: absolute;
-    font-size: 9rem;
-    left: 42%;
-    top: 15%;
-    background-color: transparent;
+.msg {
+  margin-top: 0;
+  color: #ffffff;
+  text-align: center;
+  font-family: 'PT Sans';
+  font-size: 30px;
+  width: 90%;
   }
   
-   .err2 {
-      font-size: 11.5rem;
-      position:absolute;
-      left: 63%;
-      top: 8%;
-      font-weight: 700;
-      background-color: transparent;
-    }
-  
-  .msg {
-      text-align: center;
-      font-size: 2rem;
-      position:absolute;
-      left: 16%;
-      top: 45%;
-      width: 75%;
-      background-color: transparent;
-    }
-  
-  .msg a {
-    background-color: transparent;
+  a {
     text-decoration: none;
+    color: rgb(0, 255, 208);
   }
-
+  
   a:hover {
     text-decoration: underline;
-    background-color: transparent;
   }
