--- a/web/styles/results/text-processing-style.css
+++ b/web/styles/results/text-processing-style.css
@@ -1,5 +1,6 @@
   
 .work-group{
+    grid-area: c;
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 0.5%;
@@ -59,17 +60,7 @@
             background-color: rgb(181, 181, 181);
             margin-bottom: 7px;
           }
-        
-          .save-button{
-            flex: 1;
-            max-height: 40px;
-            border: none;
-            text-align: center;
-            display: inline-block;
-            background: transparent;
-          }
-        
-          .save-button:hover{
-            background-color: #5a5a5a;
-            color: white;
+
+          .button{
+            width: 100%;
           }
