--- a/web/styles/text-processing-style.css
+++ b/web/styles/text-processing-style.css
@@ -47,7 +47,8 @@ to {
 
 .input-text-group{
     display: grid;
-    grid-template-rows: 4fr 1fr;
+    grid-template-rows: 3fr 1fr;
+    gap: 1%;
 }
 
 .input-text-group p {
@@ -59,6 +60,13 @@ to {
     display: grid;
     grid-template-rows: 2fr;
     background: transparent;
+    gap: 2%;
+}
+
+.input-text-area-2{
+  display: flex;
+  padding: 1px;
+  box-sizing: border-box;
 }
 
 .input-text-area .area{
@@ -74,7 +82,10 @@ to {
 
 
 .input-text-area .template select{
+  border: 1px solid #e3e5e8;
+  width: 60%;
   margin-right: 5px;
+  margin-left: 5px;
 }
 
 .rewrite-button-group{
@@ -128,12 +139,9 @@ to {
     text-align: left;
     line-height: 1.5em;
     padding: 10px;
-  box-sizing: border-box;
+    box-sizing: border-box;
   }
 
-  .template, .area {
-    background: transparent;
-  }
 
   .none-display{
     display: none;
