--- a/web/templates/404.html
+++ b/web/templates/404.html
@@ -6,9 +6,7 @@
   </head>
   <body>
     <div class="mainbox">
-      <div class="err">4</div>
-      <i class="far fa-question-circle fa-spin"></i>
-      <div class="err2">4</div>
-      <div class="msg">Может быть, эта страница переехала? Была удалена? Скрывается в карантине? Или вообще никогда не существовала? <p>Давайте перейдем <a href="/protected/">на главную</a> и попробуем оттуда.</p></div>
+      <p class="err">404</p>
+      <p class="msg">Может быть, эта страница переехала? Была удалена? Скрывается в карантине? Или вообще никогда не существовала? Давайте перейдем <a href="/protected/">на главную</a> и попробуем оттуда.</p>
     </div>
   </body>
