--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html; charset=utf8" />
-  <title>Реальное время / {{.title}}</title>
+  <title>Расшифровка аудио | Генерация текста | Создание изображений | ИИ | Нейросеть | Реальное время</title>
   <link rel="icon" href="/web/static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/web/styles/basic/new-basic.css">
   <link rel="stylesheet" href="/web/styles/basic/new-style.css">
@@ -12,26 +12,24 @@
   <link rel="stylesheet" href= "{{.style}}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="description" content="Здесь можно генерировать тексты и изображения, расшифровывать аудио и видео">
+  <meta name="keywords" content="ИИ, Нейросети, Расшифровка аудио, Расшифровка видео, Генерация картинок, Новости, Удалить фон с картинки">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <div class="header-buttons">
-      <form action="/protected/"><button class="header-button upper-bold" id="userPage">Мой профиль</button></form>
-      <br>
-      <form action="/protected/recognition"><button class="header-button upper-bold" id="filePage">Расшифровка</button></form>
-      <form action="/protected/image"><button class="header-button upper-bold" id="imagePage">Генерация изображения</button></form>
-      <form action="/protected/imgprocess"><button class="header-button upper-bold" id="upscalePage">Обработка изображения</button></form>
-      <form action="/protected/text"><button class="header-button upper-bold" id="textPage">Обработка текста</button></form>
-      <form action="/protected/news"><button class="header-button upper-bold" id="newsPage">Актуальные новости</button></form>
-      <form action="/protected/media"><button class="header-button upper-bold" id="mediaPage">Новости СМИ</button></form>
-      <br>
-      <form action="/photopea" method="post" target="_blank"><button class="header-button upper-bold" id="textPage">↪ Онлайн Photoshop</button></form>
-      <form action="https://mail.realnoevremya.ru/" target="_blank"><button class="header-button upper-bold" id="textPage">↪ Корпоративная почта</button></form>
+      <a href="/protected/"><button class="header-button" id="userPage">Мой профиль</button></a>
+      <a href="/protected/recognition"><button class="header-button" id="filePage">Расшифровка</button></a>
+      <a href="/protected/image"><button class="header-button" id="imagePage">Генерация изображения</button></a>
+      <a href="/protected/imgprocess"><button class="header-button" id="upscalePage">Обработка изображения</button></a>
+      <a href="/protected/text"><button class="header-button" id="textPage">Обработка текста</button></a>
+      <a href="/protected/news"><button class="header-button" id="newsPage">Актуальные новости</button></a>
+      <a href="/protected/media"><button class="header-button" id="mediaPage">Новости СМИ</button></a>
+      <a href="/protected/fips"><button class="header-button" id="fipsPage">Товарные знаки</button></a>
     </div>
     <div class="header-group">
-      <img src="/web/static/img/logo.png" class="logo-image"/>
-      <h1>Реальное время / {{.title}} </h1>
-      <p class="version-label" style="margin-left: 10px; color: rgb(96, 96, 96);">(v 5.1.0)</p>
+      <a href="/"><img src="/web/static/img/logo.png" class="logo-image"/></a>
+      <h1>{{.title}}</h1>
     </div>
 {{end}}
