--- a/web/templates/no-operation.html
+++ b/web/templates/no-operation.html
@@ -5,10 +5,8 @@
         <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
     </div>
     <div class="mainbox">
-        <div class="err">4</div>
-        <i class="far fa-question-circle fa-spin"></i>
-        <div class="err2">4</div>
-        <div class="msg">Запрос с таким ID не найден или вообще не существует.<p>Давайте перейдем <a href="/">на главную</a>.</p></div>
+        <p class="err">404</p>
+        <p class="msg">Может быть, эта страница переехала? Была удалена? Скрывается в карантине? Или вообще никогда не существовала? Давайте перейдем <a href="/protected/">на главную</a> и попробуем оттуда.</p>
       </div>
 </div>
 {{template "footer.html" .}}
