--- a/web/templates/text-processing-result.html
+++ b/web/templates/text-processing-result.html
@@ -17,6 +17,6 @@
     </div>
 </div>
 <div class="button-save">
-    <button class="save-button" id="saveButton">Сохранить</button>
+    <button class="button" id="saveButton">Сохранить</button>
 </div>
 {{template "footer.html" .}}
