date filter in fips parser

--- a/web/templates/fips.html
+++ b/web/templates/fips.html
@@ -2,6 +2,9 @@
 <div class="work-group nobg">
 <div class="search clr">
     <input type="text" id="search-input" class="search-input" placeholder="Татарстан, Казань, Москва">
+    <input type="date" id="search-input-start" class="search-input">
+    <p>↔</p>
+    <input type="date" id="search-input-end" class="search-input">
     <button id="search-button" class="button search-button">Найти</button>
 </div>
 <div class="out nobg">
