--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,6 +1,6 @@
 {{define "footer.html"}}
 </div>
-<script src="{{.script}}"></script>
+<script type="text/javascript" charset="utf-8" src="{{.script}}"></script>
 </body>
 </html>
 {{end}}
