--- a/web/styles/fips-style.css
+++ b/web/styles/fips-style.css
@@ -9,8 +9,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
     box-sizing:border-box;
+    width: 100%;
+    padding: 5px;
   }
 
   .out{
@@ -70,10 +71,15 @@
   height: 25px;
 }
 
-.search-input{
-  height: 20px;
-  width: 100%;
-  margin-right: 30px;
-  text-align: left;
+input{
   border: 1px solid #e3e5e8;
+  height: 25px;
+}
+
+input[type="text"]{
+  width: 60%;
+  text-align: left;
+}
+input[type="date"]{
+  width: 10%;
 }
