--- a/web/templates/fips.html
+++ b/web/templates/fips.html
@@ -7,20 +7,8 @@
     <input type="date" id="search-input-end" class="search-input">
     <button id="search-button" class="button search-button">Найти</button>
 </div>
-<div class="out nobg">
-{{range .Fips}}
-<a href="{{.URI}}" target="_blank" class="description">
-<div class="image-element">
-    <div class="el-data">
-        <img src="{{.IMAGE_URL}}" class="image">
-    </div>
-        <div class="el-desc">
-            <p>({{.REGISTRATION_NUMBER}}) {{.AUTHOR}}</p>
-            <p class="date">{{.MAIL}} — {{.DATE}}</p>
-        </div>
-</div>
-</a>
-{{end}}
+<div class="out nobg" id="fips-res">
+
 </div>
 </div>
 {{template "footer.html" .}}
