--- a/web/templates/join.html
+++ b/web/templates/join.html
@@ -2,6 +2,12 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="web/styles/auth/registration.css">
+    <meta property="og:title" content="Neuron-Nexus / Служба Новостей">
+    <meta property="og:description" content="Нейросетевая служба новостей">
+    <meta property="og:image" content="/web/static/img/og.jpg">
+    <meta property="og:url" content="https://neuron-nexus.ru/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Neuron Nexus"> 
 </head>
 
 <body>
