--- a/web/styles/admin-images-style.css
+++ b/web/styles/admin-images-style.css
@@ -26,7 +26,7 @@
     background: transparent;
   }
 
-  .work-group .image-element .el-data img {
+  .work-group .image-element .el-data img:not(.logo-image) {
     max-height: 170px;
   }
 
