--- a/web/styles/image-generation-style.css
+++ b/web/styles/image-generation-style.css
@@ -153,7 +153,7 @@ to {
     justify-content: center;
 }
 
-.output-image-class img{
+.output-image-class img:not(.logo-image){
     display: block;
     border-radius: 5px;
     border: solid 1px black;
