--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -2,31 +2,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <meta charset="utf-8">
   <meta http-equiv="content-type" content="text/html; charset=utf8" />
-  <title>Расшифровка аудио | Генерация текста | Создание изображений | ИИ | Нейросеть | Реальное время</title>
+  <title>Расшифровка аудио | Генерация текста | Создание изображений | ИИ | Нейросеть</title>
   <link rel="icon" href="/web/static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/web/styles/basic/new-basic.css">
   <link rel="stylesheet" href="/web/styles/basic/new-style.css">
   <link rel="stylesheet" href="/web/styles/basic/animation.css">
   <link rel="stylesheet" href= "{{.style}}">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <meta name="description" content="Здесь можно генерировать тексты и изображения, расшифровывать аудио и видео">
-  <meta name="keywords" content="ИИ, Нейросети, Расшифровка аудио, Расшифровка видео, Генерация картинок, Новости, Удалить фон с картинки">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Neuron-Nexus / Служба Новостей">
+  <meta property="og:description" content="Нейросетевая служба новостей">
+  <meta property="og:image" content="https://neuron-nexus.ru/web/static/img/og.jpg">
+  <meta property="og:url" content="https://neuron-nexus.ru/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Neuron Nexus"> 
 </head>
 <body>
   <div class="container">
     <div class="header-buttons">
       <a href="/protected/"><button class="header-button" id="userPage">Мой профиль</button></a>
+      <hr>
       <a href="/protected/recognition"><button class="header-button" id="filePage">Расшифровка</button></a>
       <a href="/protected/image"><button class="header-button" id="imagePage">Генерация изображения</button></a>
       <a href="/protected/imgprocess"><button class="header-button" id="upscalePage">Обработка изображения</button></a>
       <a href="/protected/text"><button class="header-button" id="textPage">Обработка текста</button></a>
-      <a href="/protected/news"><button class="header-button" id="newsPage">Актуальные новости</button></a>
+      <a href="/protected/tts" target="_blank"><button class="header-button">Генерация аудио</button></a>
+      <hr>
+      <a href="/news" target="_blank"><button class="header-button" id="agregatorPage">Агрегатор новостей</button></a>
+      <a href="/protected/news"><button class="header-button" id="newsPage">Ведомства Татарстана</button></a>
+      <a href="/protected/rfpravo"><button class="header-button" id="mediaPage">Официальное опубликование РФ</button></a>
+      <a href="/protected/rfnews"><button class="header-button" id="mediaPage">Ведомства России</button></a>
+      <a href="/protected/cbrnews"><button class="header-button" id="mediaPage">Центральный Банк</button></a>
       <a href="/protected/media"><button class="header-button" id="mediaPage">Новости СМИ</button></a>
+      <hr>
       <a href="/protected/fips"><button class="header-button" id="fipsPage">Товарные знаки</button></a>
+      <a href="/protected/price?model=fan"><button class="header-button" id="fipsPage">Мониторинг цен</button></a>
     </div>
     <div class="header-group">
       <a href="/"><img src="/web/static/img/logo.png" class="logo-image"/></a>
